methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:4: error: not found: value brushdown
    right ;forward();brushDown();brushdown();backward()
                                 ^